<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/enter"
        android:backgroundTint="#FFFF"
        android:textColor="#FFFF"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/answer"
        android:backgroundTint="#FFFF"
        android:textColor="#FFFF"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/answer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00FFFEFE">

        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/one"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="#FFFF"
                    android:text="@string/one"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/two"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="#FFFF"
                    android:text="@string/two"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/three"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="#FFFF"
                    android:text="@string/three"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/four"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="#FFFF"
                    android:text="@string/four"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/seven"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/five"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="#FFFF"
                    android:text="@string/five"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/eight"
                    app:layout_constraintStart_toEndOf="@+id/four" />

                <Button
                    android:id="@+id/six"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="#FFFF"
                    android:text="@string/six"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/nine"
                    app:layout_constraintStart_toEndOf="@+id/five" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                <Button
                    android:id="@+id/seven"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="#FFFF"
                    android:text="@string/seven"
                    android:textSize="20sp" />


                <Button
                    android:id="@+id/eight"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="#FFFF"
                    android:text="@string/eight"
                    android:textSize="20sp" />


                <Button
                    android:id="@+id/nine"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="#FFFF"
                    android:text="@string/nine"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <Button
                    android:id="@+id/point"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="#FFFF"
                    android:text="@string/point"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/zero"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="#FFFF"
                    android:text="@string/zero"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/clear"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="#FFFF"

                    android:paddingBottom="5dp"
                    android:text="@string/clear" />

            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/history_b"
            app:layout_constraintVertical_bias="1.0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/sin"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/sin" />

                <Button
                    android:id="@+id/asin"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/asin" />

                <Button
                    android:id="@+id/factorial"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/factorial" />

                <Button
                    android:id="@+id/split_revision"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/revision" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/cos"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/cos" />

                <Button
                    android:id="@+id/acos"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/acos" />

                <Button
                    android:id="@+id/ln"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/ln" />

                <Button
                    android:id="@+id/bin"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/bin" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/tan"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/tan" />

                <Button
                    android:id="@+id/atan"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/atan" />

                <Button
                    android:id="@+id/pi"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/pi" />

                <Button
                    android:id="@+id/oct"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/oct" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/yX"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/XY" />

                <Button
                    android:id="@+id/sqrt"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/sqr_root" />

                <Button
                    android:id="@+id/exp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/e" />

                <Button
                    android:id="@+id/hex"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/hex" />
            </TableRow>
        </TableLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginBottom="225dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tableLayout2">

            <Button
                android:id="@+id/bracket1"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/bracket1" />

            <Button
                android:id="@+id/bracket2"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/bracket2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginBottom="150dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tableLayout2">

            <Button
                android:id="@+id/plus"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/plus" />

            <Button
                android:id="@+id/minus"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginBottom="75dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tableLayout2">

            <Button
                android:id="@+id/multiply"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/multiply" />

            <Button
                android:id="@+id/split"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/split" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tableLayout2">

            <Button
                android:id="@+id/equal"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/equal" />
        </LinearLayout>

        <Button
            android:id="@+id/history_b"
            android:layout_width="wrap_content"
            android:layout_height="40dp"

            android:backgroundTint="#FFFFFF"

            android:text="History"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>